--- a/src/Components/Welcome/Welcome.module.css
+++ b/src/Components/Welcome/Welcome.module.css
@@ -21,3 +21,29 @@
     border-radius: 20px;
     margin: 1rem;
 }
+.center{
+    display: none;
+}
+.center h3,i{
+    display: inline;
+    font-size: 2vw;
+    margin-left: 20px;
+}
+.center input{
+    /* display: none */
+}
+/* @media (max-width: 858px){
+    .div1{
+        display: block;
+        height: 20vh;
+        width: 100vw;
+    }
+    .parent{
+        display: contents;
+    }
+    .div2{
+        width: auto
+    }
+  
+   
+} */
