--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.parent {
+/* .parent {
   display: block;
   background: #F6DDCC;
   margin: 0;
@@ -19,4 +19,4 @@
   width: 77%;
   height: 90vh;
   border-radius: 20px;
-}
+} */
