--- a/src/Components/Profile/Profile.module.css
+++ b/src/Components/Profile/Profile.module.css
@@ -1,12 +1,15 @@
 .signout{
     position: fixed;
     top: 86vh;
-    left: 29px;
+    /* left: 29px; */
 
 }
 .signout button{
     border: none;
     background: none;
+}
+.signout span{
+    font-size: 0.9rem;
 }
 .detail{
     width: 100%;
@@ -20,7 +23,7 @@
     justify-content: center;
 }
 .detail span {
-    font-size: 1.5vw;
+    font-size: 0.7rem;
 
 }
 .image{
@@ -30,7 +33,7 @@
     
 }
 .navbar ul{
-    font-size: 1.2vw;
+    font-size:0.7rem;
     list-style-type: none;
   margin: 0;
   padding: 0;
